--- a/modules/home/index.less
+++ b/modules/home/index.less
@@ -6,7 +6,7 @@
         background-size: cover;
         background-position: 0%;
         height: calc(100vh + @extra-screen);
-        width: 100vw;
+        width: 100%;
         margin-bottom: -@extra-screen;
 
         &::before,
