--- a/modules/home/index.less
+++ b/modules/home/index.less
@@ -1,13 +1,26 @@
 #home-view {
     @extra-screen: 80px;
+    @menu-height : 120px;
 
     .home-banner {
+        padding-top: @menu-height;
+        height: auto;
         background-image: url('../../res/images/home-back.png');
-        background-size: cover;
-        background-position: 0%;
-        height: calc(100vh + @extra-screen);
-        width: 100%;
-        margin-bottom: -@extra-screen;
+        background-repeat: no-repeat;
+
+        background-size: auto 100vh;
+        background-position: 0 0;
+
+
+        @media @desktop {
+            background-position: 0%;
+            background-size: cover;
+            width: 100%;
+            margin-bottom: -@extra-screen;
+            height: calc(100vh + @extra-screen - @menu-height);
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+        }
 
         &::before,
         &::after {
@@ -18,6 +31,10 @@
             width: 100%;
             height: calc(100vh + @extra-screen);
             mix-blend-mode: multiply;
+
+            @media @mobile {
+                height: calc(100vh);
+            }
         }
 
         &::before {
@@ -28,10 +45,198 @@
             background-color: #C92121;
         }
 
+
+        .intro {
+
+            position: relative;
+            z-index: 1;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-evenly;
+
+            @media @desktop {
+                margin-left: 150px;
+            }
+
+            @media @mobile {
+                min-height: calc(100vh - @menu-height);
+            }
+
+            .content {
+                @media @mobile {
+                    width: fit-content;
+                }
+
+
+                .name {
+                    width: 100vw;
+
+                    @media @desktop {
+                        height: 110px;
+                        width: fit-content;
+                    }
+
+                }
+
+                .text {
+                    font-family: Cousine;
+                    font-size: 40px;
+                    line-height: 45px;
+                    color: #FFFFFF;
+
+                    @media @desktop {
+                        margin-left: 170px;
+                    }
+
+                    @media @mobile {
+                        width: 100vw;
+                        font-size: 20px;
+                        line-height: 23px;
+                    }
+
+                }
+            }
+
+            .vector {
+                height: auto;
+                width: 100vw;
+
+                @media @desktop {
+                    display: none;
+                }
+            }
+
+
+
+            .vector-inverse {
+                height: 20px;
+                width: fit-content;
+                transform: rotate(180deg);
+
+                @media @mobile {
+                    display: none;
+                }
+
+            }
+
+            .social {
+                display: flex;
+                justify-content: center;
+                gap: 10px;
+
+                @media @mobile {
+                    width: fit-content;
+                }
+
+                img {
+                    height: 60px;
+                    width: 60px;
+                }
+            }
+        }
+
+        .register {
+            position: relative;
+            z-index: 1;
+            display: flex;
+            flex-direction: column;
+            max-width: 100vw;
+
+            @media @desktop {
+                margin-right: 100px;
+            }
+
+            @media @mobile {
+                //position: absolute;
+                //margin-top: 100vh;
+            }
+
+            .vector {
+                @media @mobile {
+                    display: none;
+                }
+
+                height: 20px;
+                width: fit-content;
+                margin-left: auto;
+            }
+
+            form {
+                margin-top: 25px;
+                max-width: 500px;
+                padding: 50px 30px 40px;
+                background: rgba(255, 255, 255, 0.7);
+                backdrop-filter: blur(20px);
+                border-radius: 5px;
+                display: inline-grid;
+                width: inherit;
+
+                @media @mobile {
+                    margin: 0;
+                    background: #F5F5F5;
+                    width: inherit;
+                }
+
+                header {
+                    font-family: Cousine;
+                    font-style: normal;
+                    font-weight: bold;
+                    font-size: 22px;
+                    line-height: 25px;
+                    text-transform: uppercase;
+                    display: grid;
+                    grid-template-columns: 1fr 1fr;
+                    align-items: center;
+                    color: #000000;
+
+                    .neko {
+                        height: 136px;
+                        width: fit-content;
+                        position: relative;
+                        margin: auto;
+
+                        &::before {
+                            content: "";
+                            position: absolute;
+                            bottom: 5px;
+                            right: -15px;
+                            width: 70px;
+                            height: 70px;
+                            background-image: url('../../res/images/ellipse.png');
+                            background-size: cover;
+                            background-position: 0%;
+                            mix-blend-mode: multiply;
+                        }
+                    }
+                }
+
+                label {
+                    font-family: Cousine;
+                    font-style: normal;
+                    font-weight: normal;
+                    font-size: 17px;
+                    line-height: 19px;
+                }
+
+                label+input {
+                    margin: 15px 0;
+                }
+
+                input {
+                    border-radius: 5px;
+                    padding: 10px;
+                    border: 0;
+                }
+            }
+        }
+
+
     }
 
     .about {
         position: relative;
+        max-width: 100vw;
+
 
         .title {
             height: @extra-screen;
@@ -45,9 +250,14 @@
 
         .content {
             display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 100px;
-            margin: 70px 200px;
+            margin: 35px 40px;
+            gap: 40px;
+
+            @media @desktop {
+                gap: 100px;
+                grid-template-columns: repeat(3, 1fr);
+                margin: 70px 200px;
+            }
 
             article {
                 margin-top: 20px;
@@ -57,8 +267,11 @@
 
                 span {
                     margin: auto;
-                    text-align: center;
                     display: block;
+
+                    @media @desktop {
+                        text-align: center;
+                    }
 
                     &::before {
                         height: 100px;
@@ -82,12 +295,49 @@
         background-image: url('../../res/images/fondo_twitch.png');
         background-size: cover;
         background-repeat: no-repeat;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+
+        @media @mobile {
+            display: none;
+        }
+
+        .logo {
+            margin: auto;
+
+            img {
+                height: 400px;
+            }
+        }
+
+        .transmition {
+            font-family: Cousine;
+            font-style: normal;
+            font-weight: bold;
+            font-size: 36px;
+            line-height: 41px;
+            text-align: center;
+            color: #000000;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+
+            img {
+                height: 200px;
+                width: fit-content;
+            }
+        }
     }
 
     .youtube {
         min-height: 650px;
         background: #FF0000;
         text-align: center;
+
+        @media @mobile {
+            display: none;
+        }
 
         iframe {
             margin: 60px auto 45px;
@@ -97,11 +347,17 @@
     }
 
     .contact {
-        display: grid;
-        grid-template-columns: auto auto;
-        justify-content: space-evenly;
-        gap: 100px;
-        padding: 50px 300px;
+        padding: 50px 30px 70px;
+        width: auto;
+
+        @media @desktop {
+            display: grid;
+            grid-template-columns: auto auto;
+            justify-content: space-evenly;
+            gap: 100px;
+            padding: 50px 300px 100px;
+        }
+
 
 
         h3 {
@@ -120,8 +376,23 @@
             height: 200px;
         }
 
+        p {
+            font-family: Cousine;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 16px;
+            line-height: 18px;
+            text-decoration-line: underline;
+
+            color: #000000;
+        }
+
         .form {
             width: 500px;
+
+            @media @mobile {
+                width: 100%;
+            }
 
             form {
                 display: inline-grid;
