Migración del juego

--- a/res/theme/style.less
+++ b/res/theme/style.less
@@ -15,3 +15,5 @@
 @import "../../modules/index";
 
 @import "../../modules/home/index";
+@import "../../modules/games/index";
+@import "../../modules/games/components/memory";
