--- a/components/menu.less
+++ b/components/menu.less
@@ -11,6 +11,7 @@
         position: relative;
         background-color: rgb(255, 255, 255);
         padding: 10px;
+        cursor: pointer;
 
         img {
             height: 100%;
@@ -31,6 +32,7 @@
 
             li {
                 padding: 7px;
+                cursor: pointer;
                 &.box {
                     border: 1px solid #FFFFFF;
                     box-sizing: border-box;
