--- a/modules/home/index.less
+++ b/modules/home/index.less
@@ -161,6 +161,28 @@
                 margin-left: auto;
             }
 
+            .invitation {
+                max-width: 500px;
+                padding: 30px;
+                background: rgba(255, 255, 255, 0.7);
+                backdrop-filter: blur(20px);
+                border-radius: 5px;
+                display: inline-grid;
+                width: inherit;
+                height: calc(100vh - 120px - 80px);
+
+                /* width: 100%; */
+
+                img {
+                    max-height: calc(100vh - 120px - 80px);
+                    max-width: 500px;
+
+                    @media @mobile {
+                        width: 100%;
+                    }
+                }
+            }
+
             form {
                 margin-top: 25px;
                 max-width: 500px;
