--- a/res/theme/style.less
+++ b/res/theme/style.less
@@ -15,5 +15,6 @@
 @import "../../modules/index";
 
 @import "../../modules/home/index";
+@import "../../modules/enroll/index";
 @import "../../modules/games/index";
 @import "../../modules/games/components/memory";
