--- a/modules/enroll/index.less
+++ b/modules/enroll/index.less
@@ -1,5 +1,6 @@
 #register-view {
     @menu-height : 120px;
+    position: relative;
 
     .container-register {
         background-color: #C92121;
@@ -136,6 +137,7 @@
                 text-align: center;
 
                 button {
+                    cursor: pointer;
                     background: #000000;
                     border-radius: 5px;
                     padding: 12px 50px;
