--- a/res/theme/style.less
+++ b/res/theme/style.less
@@ -10,6 +10,7 @@
 
 
 @import "../../components/menu";
+@import "../../components/loader";
 
 @import "../../modules/layout";
 @import "../../modules/index";
