--- a/components/menu.html
+++ b/components/menu.html
@@ -4,9 +4,9 @@
     </div>
     <nav>
         <ul>
-            <li class="box">Nosotros</li>
-            <li>
-                <div @click="$router.push({name: 'register'})">Registro</div>
+            <!--<li >Nosotros</li>-->
+            <li class="box">
+                <div @click="$router.push({name: 'register'})">Pre inscripción</div>
             </li>
         </ul>
     </nav>
