--- a/components/menu.less
+++ b/components/menu.less
@@ -12,6 +12,7 @@
         background-color: rgb(255, 255, 255);
         padding: 10px;
         cursor: pointer;
+        border-radius: 0px 0px 30px 30px;
 
         img {
             height: 100%;
