--- a/modules/home/index.less
+++ b/modules/home/index.less
@@ -1,5 +1,5 @@
 #home-view {
-    @extra-screen: 80px;
+    @extra-screen: 50px;
     @menu-height : 120px;
 
     .home-banner {
@@ -131,6 +131,7 @@
                 img {
                     height: 60px;
                     width: 60px;
+                    cursor: pointer;
                 }
             }
         }
@@ -167,9 +168,9 @@
                 background: rgba(255, 255, 255, 0.7);
                 backdrop-filter: blur(20px);
                 border-radius: 5px;
-                display: inline-grid;
                 width: inherit;
                 height: calc(100vh - 120px - 80px);
+                text-align: center;
 
                 /* width: 100%; */
 
@@ -439,6 +440,23 @@
                     box-sizing: border-box;
                     border-radius: 5px;
                     padding: 10px;
+                }
+
+                button{
+                    background-color: #FF0000;
+                    margin-top: 15px;
+                    border: 0;
+                    border-radius: 5px;
+                    width: 200px;
+                    padding: 10px;
+
+                    color: #FFF;
+                    font-family: Cousine;
+                    font-style: normal;
+                    font-weight: bold;
+                    font-size: 24px;
+                    line-height: 27px;
+                    text-align: center;
                 }
             }
         }
