--- a/components/menu.html
+++ b/components/menu.html
@@ -4,9 +4,11 @@
     </div>
     <nav>
         <ul>
-            <!--<li >Nosotros</li>-->
-            <li class="box">
-                <div @click="$router.push({name: 'register'})">Pre inscripción</div>
+            <!--li>
+                <div @click="$router.push({name: 'game'})">Juegos (Demo)</div>
+            </li -->
+            <li>
+                <div  class="box" @click="$router.push({name: 'register'})">Pre inscripción</div>
             </li>
         </ul>
     </nav>
