--- a/res/theme/style.less
+++ b/res/theme/style.less
@@ -17,5 +17,6 @@
 
 @import "../../modules/home/index";
 @import "../../modules/enroll/index";
+@import "../../modules/enroll/course";
 @import "../../modules/games/index";
 @import "../../modules/games/components/memory";
