--- a/components/menu.less
+++ b/components/menu.less
@@ -32,9 +32,10 @@
             flex-direction: row;
 
             li {
-                padding: 7px;
                 cursor: pointer;
-                &.box {
+                
+                .box {
+                    padding: 7px;
                     border: 1px solid #FFFFFF;
                     box-sizing: border-box;
                     border-radius: 5px;
