--- a/components/loader.less
+++ b/components/loader.less
@@ -1,7 +1,7 @@
 .container-loader {
     position: absolute;
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     background-color: #00000090;
     top: 0;
     left: 0;
