--- a/components/menu.html
+++ b/components/menu.html
@@ -8,7 +8,7 @@
                 <div @click="$router.push({name: 'game'})">Juegos (Demo)</div>
             </li -->
             <li>
-                <div  class="box" @click="$router.push({name: 'register'})">Inscripción</div>
+                <div  class="box" @click="$router.push({name: 'register:course'})">Inscripción</div>
             </li>
         </ul>
     </nav>
