--- a/components/menu.html
+++ b/components/menu.html
@@ -7,9 +7,9 @@
             <!--li>
                 <div @click="$router.push({name: 'game'})">Juegos (Demo)</div>
             </li -->
-            <!--li>
-                <div  class="box" @click="$router.push({name: 'register'})">Inscripción</div>
-            </li-->
+            <li>
+                <div  class="box" @click="$router.push({name: 'register:course'})">Inscripción</div>
+            </li>
         </ul>
     </nav>
 </div>
